Recente quase ok

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class=" card-1">
 
-                <img src="IMGS/motopng-1.png" alt="" id="logo-cards">
+                <img src="IMGS/entrega-rapida.png" alt="" id="logo-cards">
                 <h1>Serviços Motoboys <br>
                 </h1>
                 <h2>Serviços esporádicos para entregas e coleta de pequenos volumes, valores calculado por KM.</h2>
@@ -99,6 +99,55 @@
         </div>
 
     </main>
+
+    <div class="asside">
+
+
+<div class="card-ass">
+    <h1>Missão</h1>
+    <h2>Prestar serviços com segurança, profissionalismo e ética, garantindo a satisfação da empresa, dos colaboradores, dos clientes e da sociedade.</h2>
+</div>
+
+
+<div class="card-ass">
+    <h1>Visão</h1>
+    <h2>Ser a melhor empresa de moto frete e pequenas cargas do Brasil, reconhecida e respeitada pela ética e excelênciadso serviços prestados.</h2>
+</div>
+
+
+<div class="card-ass">
+    <h1>Valores</h1>
+    <h2>Atuamos com absoluta honestidade, transparência e respeito com nossos colaboradores, construindo relações de confiança e integridade aos serviços prestados..</h2>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+
+    <footer class="footer">
+
+
+
+<div class="img-footer">
+    <img src="IMGS/imgs-footer/instagram.png" alt="">
+    <img src="IMGS/imgs-footer/facebook.png" alt="">
+    <img src="IMGS/imgs-footer/sinal-do-twitter.png" alt="">
+    <img src="IMGS/imgs-footer/whatsapp.png" alt="">
+
+</div>
+
+<div class="copy">© DSKE - 2022 todos os direitos reservevados</div>
+
+    </footer>
         
 </body>
 </html>
